--- a/GriefGroceryStore/WebContent/login.html
+++ b/GriefGroceryStore/WebContent/login.html
@@ -5,14 +5,9 @@
 <link rel="stylesheet" href="css/login.css" type="text/css"/>
 <title>登录</title>
 </head>
-<script src="jquery/jquery.min.js">
-</script>
-<script src="js/cookieUtil.js">
-</script>
+<script src="jquery/jquery.min.js"></script>
+<script src="js/cookieUtil.js"></script>
 <body>
-<!-- <iframe  name="content_iframe" height=40 src="loginBarFrame.html" frameborder=0>
-</iframe>  -->
-
  
 	<div id="container" >
 		<div id="ShopName">
@@ -25,8 +20,8 @@
 		</div>
 		<div id="formBox">
 			<form>
-				用户名&nbsp;&nbsp;<input type="text" required="required"  id="username"/><br><br><br>
-				密码&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="password" required="required"  id="password"/>&nbsp;&nbsp;<a href="repassword.html">忘记密码</a><br><br><br>
+				用户名&nbsp;&nbsp;<input type="text"   id="username" required="required"/><br><br><br>
+				密码&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="password"   id="password" required="required"/>&nbsp;&nbsp;<a href="repassword.html">忘记密码</a><br><br><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<button type="submit" id="login">登录</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<button type="sumbit" id="register">注册</button>
