--- a/GriefGroceryStore/WebContent/loginBarFrame.html
+++ b/GriefGroceryStore/WebContent/loginBarFrame.html
@@ -5,12 +5,12 @@
 <title>Insert title here</title>
 <link rel="stylesheet" href="css/homePage.css" type="text/css"/>
 <script src="js/cookieUtil.js"></script>
+<script src="js/loginBar.js"></script>
 </head>
 <body>
     <nav id="login">
 			<a href="http://localhost:8080/GriefGroceryStore/login.html" style="text-decoration:none;color:inherit;">登录</a>|
-			<a>注册</a>
+			<a href="http://localhost:8080/GriefGroceryStore/register.html" style="text-decoration:none;color:inherit;">注册22</a>
 	</nav>
 </body>
-<script type="text/javascript">loadloginBar()</script>
 </html>
