--- a/GriefGroceryStore/WebContent/personalSpace.html
+++ b/GriefGroceryStore/WebContent/personalSpace.html
@@ -2,9 +2,35 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>这是个人空间！！！</title>
+<title>个人中心</title>
+<link rel="stylesheet" href="css/personalSpace.css" type="text/css"/>
+<script src="js/jquery.min.js"></script>
+<script src="js/personalSpace.js"></script>
 </head>
 <body>
-
+	<div id="container">
+		<header>
+			<div>
+				<h2>解忧杂货铺-个人中心</h2>
+			</div>
+			<nav id="topRightNav">
+				<span></span>
+				<a href=>退出  | </a>
+				<a href=>注册</a>
+			</nav>
+		</header>
+		<center>
+			<nav id="leftNav">
+				<a id="baseInfo">基本资料</a>
+				<a id="orderItem">购买记录</a>
+				<a id="itemCar">购物车</a>
+				<a id="accountInfo">个人财务</a>
+				<a href="index.html">回到首页</a>
+			</nav>
+			<div id="content">
+			
+			</div>
+		</center>
+	</div>
 </body>
 </html>
