--- a/GriefGroceryStore/WebContent/allProducts.html
+++ b/GriefGroceryStore/WebContent/allProducts.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>全部商品</title>
 <link rel="stylesheet" href="css/allProducts.css" type="text/css"/>
+<link rel="stylesheet" href="css/profilePhoto.css" type="text/css"/>
 <script src="jquery/jquery.min.js"></script>
 <script src="js/cookieUtil.js"></script>
 <script src="js/loginBar.js"></script>
