--- a/GriefGroceryStore/WebContent/index.html
+++ b/GriefGroceryStore/WebContent/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes"/>
 <title>解忧杂货铺-商品展示</title>
 <link rel="stylesheet" href="css/homePage.css" type="text/css"/>
+<link rel="stylesheet" href="css/profilePhoto.css" type="text/css"/>
 <script src="jquery/jquery.min.js"></script>
 <script src="js/cookieUtil.js"></script>
 <script src="js/loginBar.js"></script>
