--- a/GriefGroceryStore/WebContent/loginBarFrame.html
+++ b/GriefGroceryStore/WebContent/loginBarFrame.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <nav id="login">
+            <img src="img/default_profile_photo.jpg"/>
 			<a href="http://localhost:8080/GriefGroceryStore/login.html" style="text-decoration:none;color:inherit;">登录</a>|
 			<a href="http://localhost:8080/GriefGroceryStore/register.html" style="text-decoration:none;color:inherit;">注册22</a>
 	</nav>
